// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli should not override config with cli defaults 1`] = `
"import React from \\"react\\";

const SvgFile = () => <svg viewBox=\\"0 0 48 1\\"><title>{\\"Rectangle 5\\"}</title><desc>{\\"Created with Sketch.\\"}</desc><defs /><g id=\\"Page-1\\" stroke=\\"none\\" strokeWidth={1} fill=\\"none\\" fillRule=\\"evenodd\\"><g id=\\"19-Separator\\" transform=\\"translate(-129.000000, -156.000000)\\" fill=\\"#063855\\"><g id=\\"Controls/Settings\\" transform=\\"translate(80.000000, 0.000000)\\"><g id=\\"Content\\" transform=\\"translate(0.000000, 64.000000)\\"><g id=\\"Group\\" transform=\\"translate(24.000000, 56.000000)\\"><g id=\\"Group-2\\"><rect id=\\"Rectangle-5\\" x={25} y={36} width={48} height={1} /></g></g></g></g></g></g></svg>;

export default SvgFile;
"
`;

exports[`cli should support --prettier-config as file 1`] = `
"import React from 'react'

const SvgFile = props => (
     <svg width={48} height={1} {...props}>
          <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
     </svg>
)

export default SvgFile

"
`;

exports[`cli should support --prettier-config as json 1`] = `
"import React from 'react'

const SvgFile = props => (
     <svg width={48} height={1} {...props}>
          <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
     </svg>
)

export default SvgFile

"
`;

exports[`cli should support --svgo-config as file 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width={48} height={1} {...props}>
    <title>{'Rectangle 5'}</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support --svgo-config as json 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width={48} height={1} {...props}>
    <title>{'Rectangle 5'}</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support custom file extension 1`] = `
Array [
  "File.ts",
]
`;

exports[`cli should support different filename cases with directory output 1`] = `
Array [
  "CamelCase.js",
  "KebabCase.js",
  "MultipleDashes.js",
  "PascalCase.js",
]
`;

exports[`cli should support different filename cases with directory output: --filename-case=camel 1`] = `
Array [
  "camelCase.js",
  "kebabCase.js",
  "multipleDashes.js",
  "pascalCase.js",
]
`;

exports[`cli should support different filename cases with directory output: --filename-case=kebab 1`] = `
Array [
  "camel-case.js",
  "kebab-case.js",
  "multiple-dashes.js",
  "pascal-case.js",
]
`;

exports[`cli should support different filename cases with directory output: --filename-case=pascal 1`] = `
Array [
  "CamelCase.js",
  "KebabCase.js",
  "MultipleDashes.js",
  "PascalCase.js",
]
`;

exports[`cli should support various args: --expand-props none 1`] = `
"import React from 'react'

const SvgFile = () => (
  <svg width={48} height={1}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --expand-props start 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg {...props} width={48} height={1}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --icon 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 48 1\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --native --expand-props none 1`] = `
"import React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = () => (
  <Svg width={48} height={1}>
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --native --icon 1`] = `
"import React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = props => (
  <Svg width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 48 1\\" {...props}>
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --native --ref 1`] = `
"import React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = ({ svgRef, ...props }) => (
  <Svg width={48} height={1} ref={svgRef} {...props}>
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

const ForwardRef = React.forwardRef((props, ref) => (
  <SvgFile svgRef={ref} {...props} />
))
export default ForwardRef

"
`;

exports[`cli should support various args: --native 1`] = `
"import React from 'react'
import Svg, { Path } from 'react-native-svg'

const SvgFile = props => (
  <Svg width={48} height={1} {...props}>
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --no-dimensions 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --no-prettier 1`] = `
"import React from \\"react\\";

const SvgFile = props => <svg width={48} height={1} {...props}><path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" /></svg>;

export default SvgFile;
"
`;

exports[`cli should support various args: --no-svgo 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width=\\"48px\\" height=\\"1px\\" viewBox=\\"0 0 48 1\\" {...props}>
    <title>{'Rectangle 5'}</title>
    <desc>{'Created with Sketch.'}</desc>
    <defs />
    <g id=\\"Page-1\\" stroke=\\"none\\" strokeWidth={1} fill=\\"none\\" fillRule=\\"evenodd\\">
      <g
        id=\\"19-Separator\\"
        transform=\\"translate(-129.000000, -156.000000)\\"
        fill=\\"#063855\\"
      >
        <g id=\\"Controls/Settings\\" transform=\\"translate(80.000000, 0.000000)\\">
          <g id=\\"Content\\" transform=\\"translate(0.000000, 64.000000)\\">
            <g id=\\"Group\\" transform=\\"translate(24.000000, 56.000000)\\">
              <g id=\\"Group-2\\">
                <rect id=\\"Rectangle-5\\" x={25} y={36} width={48} height={1} />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --ref 1`] = `
"import React from 'react'

const SvgFile = ({ svgRef, ...props }) => (
  <svg width={48} height={1} ref={svgRef} {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

const ForwardRef = React.forwardRef((props, ref) => (
  <SvgFile svgRef={ref} {...props} />
))
export default ForwardRef

"
`;

exports[`cli should support various args: --replace-attr-values "#063855=currentColor" 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width={48} height={1} {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"currentColor\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --svg-props "hidden={true}" 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width={48} height={1} hidden={true} {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should support various args: --title-prop 1`] = `
"import React from 'react'

const SvgFile = ({ title, ...props }) => (
  <svg width={48} height={1} {...props}>
    <title>{title}</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should work with a simple file 1`] = `
"import React from 'react'

const SvgFile = props => (
  <svg width={48} height={1} {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgFile

"
`;

exports[`cli should work with stdin 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={48} height={1} {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default SvgComponent

"
`;
